--- a/src/demo/pom.xml
+++ b/src/demo/pom.xml
@@ -21,5 +21,15 @@
 		  <version>1.7.5</version>
 		  <scope>test</scope>
 		</dependency>
+		<dependency>
+		  <groupId>com.dinstone.beanstalkc</groupId>
+		  <artifactId>beanstalk-client</artifactId>
+		  <version>2.1.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.3.1</version>
+		</dependency>
   </dependencies>
 </project>
