--- a/src/spark/pom.xml
+++ b/src/spark/pom.xml
@@ -41,4 +41,22 @@
         <version>2.10.0</version>
     </dependency>
   </dependencies>
+  <build>
+    <resources>
+	<resource>
+	    <filtering>false</filtering>
+	    <directory>src/main/resources</directory>
+	</resource>
+	<resource>
+	    <filtering>false</filtering>
+	    <directory>src/main/java</directory>
+	    <includes>
+	        <include>**</include>
+	    </includes>
+	    <excludes>
+	        <exclude>**/*.java</exclude>
+	    </excludes>
+	</resource>
+    </resources>
+  </build>
 </project>
