--- a/src/worker/pom.xml
+++ b/src/worker/pom.xml
@@ -15,9 +15,9 @@
 		    <version>2.3.1</version>
 		</dependency>
 		<dependency>
-	    	<groupId>com.sun.jersey</groupId>
-	    	<artifactId>jersey-client</artifactId>
-	    	<version>1.18.3</version>
+			<groupId>org.neo4j.driver</groupId>
+			<artifactId>neo4j-java-driver</artifactId>
+			<version>1.0.6</version>
 		</dependency>
   </dependencies>
 </project>
