Self-packaged jar files.

--- a/src/spark/pom.xml
+++ b/src/spark/pom.xml
@@ -58,5 +58,33 @@
 	    </excludes>
 	</resource>
     </resources>
+    <plugins>
+      <plugin>
+  			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-assembly-plugin</artifactId>
+  			<executions>
+    			<execution>
+      				<id>create-my-bundle</id>
+      				<phase>package</phase>
+      				<goals>
+        				<goal>single</goal>
+      				</goals>
+      				<configuration>
+        				<descriptorRefs>
+          					<descriptorRef>jar-with-dependencies</descriptorRef>
+        				</descriptorRefs>
+				    </configuration>
+    			</execution>
+  			</executions>
+  			<configuration>
+          		<archive>
+            		<manifest>
+              			<addClasspath>true</addClasspath>
+              			<mainClass>spark.AppController</mainClass>
+            		</manifest>
+          		</archive>
+        	</configuration>
+		</plugin>
+    </plugins>
   </build>
 </project>
