--- a/src/com.dinston.beanstalkc/pom.xml
+++ b/src/com.dinston.beanstalkc/pom.xml
@@ -81,6 +81,24 @@
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
+			<plugin>
+  				<groupId>org.apache.maven.plugins</groupId>
+  				<artifactId>maven-assembly-plugin</artifactId>
+  				<executions>
+    				<execution>
+      					<id>create-my-bundle</id>
+      					<phase>package</phase>
+      					<goals>
+        					<goal>single</goal>
+      					</goals>
+      					<configuration>
+        					<descriptorRefs>
+          						<descriptorRef>jar-with-dependencies</descriptorRef>
+        					</descriptorRefs>
+					    </configuration>
+    				</execution>
+  				</executions>
+			</plugin>
 		</plugins>
 	</build>
 	<profiles>
@@ -123,6 +141,12 @@
 			<artifactId>mina-core</artifactId>
 			<version>2.0.4</version>
 			<scope>compile</scope>
+		</dependency>
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.3.1</version>
+		    <scope>compile</scope>
 		</dependency>
 	</dependencies>
 </project>
