--- a/src/storm/pom.xml
+++ b/src/storm/pom.xml
@@ -7,8 +7,8 @@
 	  <dependency>
 		  <groupId>org.apache.storm</groupId>
 		  <artifactId>storm-core</artifactId>
-		  <version>0.9.3</version>
-		  <scope>provided</scope>
+		  <version>1.0.2</version>
+		  <scope>compile</scope>
 	  </dependency>
 	  <dependency>
 		  <groupId>org.slf4j</groupId>
@@ -25,11 +25,13 @@
 		  <groupId>com.dinstone.beanstalkc</groupId>
 		  <artifactId>beanstalk-client</artifactId>
 		  <version>2.1.0</version>
+		  <scope>compile</scope>
 		</dependency>
 		<dependency>
 		    <groupId>com.google.code.gson</groupId>
 		    <artifactId>gson</artifactId>
 		    <version>2.3.1</version>
+		    <scope>compile</scope>
 		</dependency>
   </dependencies>
 </project>
