--- a/src/worker/pom.xml
+++ b/src/worker/pom.xml
@@ -5,7 +5,15 @@
   <version>0.0.1-SNAPSHOT</version>
   <build>
     <plugins>
-      <plugin>
+    	<plugin>
+  			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-compiler-plugin</artifactId>
+  			<configuration>
+          		<source>1.7</source>
+        		<target>1.7</target>
+        	</configuration>
+		</plugin>
+    	<plugin>
   			<groupId>org.apache.maven.plugins</groupId>
   			<artifactId>maven-assembly-plugin</artifactId>
   			<executions>
@@ -23,8 +31,8 @@
     			</execution>
   			</executions>
   			<configuration>
-          		<archive>
-            		<manifest>
+           		<archive>
+          			<manifest>
               			<addClasspath>true</addClasspath>
               			<mainClass>beanstalk.Worker</mainClass>
             		</manifest>
@@ -47,7 +55,7 @@
 		<dependency>
 			<groupId>org.neo4j.driver</groupId>
 			<artifactId>neo4j-java-driver</artifactId>
-			<version>1.0.6</version>
+			<version>1.3.0</version>
 		</dependency>
   </dependencies>
 </project>
